--- a/Waveform/Base.lproj/Main.storyboard
+++ b/Waveform/Base.lproj/Main.storyboard
@@ -22,9 +22,9 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3e7-4R-a67">
+                            <view contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" translatesAutoresizingMaskIntoConstraints="NO" id="3e7-4R-a67">
                                 <rect key="frame" x="67" y="268" width="240" height="131"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Waveform Synth" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aU1-Bj-A6P">
                                 <rect key="frame" x="124.5" y="28" width="126.5" height="20.5"/>
@@ -50,22 +50,28 @@
                                 </subviews>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="b7o-3X-Cma" userLabel="Filter Stack">
-                                <rect key="frame" x="30.5" y="439" width="314" height="58.5"/>
+                                <rect key="frame" x="9" y="439" width="358" height="58.5"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Filter Freq" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EaO-DB-VXc">
-                                        <rect key="frame" x="118.5" y="0.0" width="77" height="20.5"/>
+                                        <rect key="frame" x="140.5" y="0.0" width="77" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="eve-Ru-tUn">
-                                        <rect key="frame" x="-2" y="28.5" width="318" height="31"/>
+                                        <rect key="frame" x="-2" y="28.5" width="362" height="31"/>
                                         <connections>
                                             <action selector="FilterFreqSlider:" destination="BYZ-38-t0r" eventType="valueChanged" id="r5S-Dt-arO"/>
                                         </connections>
                                     </slider>
                                 </subviews>
                             </stackView>
+                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="q8h-iu-W5b">
+                                <rect key="frame" x="163" y="89" width="51" height="31"/>
+                                <connections>
+                                    <action selector="PlaySwitch:" destination="BYZ-38-t0r" eventType="valueChanged" id="TKN-V1-Rj8"/>
+                                </connections>
+                            </switch>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
@@ -74,10 +80,12 @@
                             <constraint firstItem="gkv-ZY-FB9" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="9pv-yI-zSl"/>
                             <constraint firstItem="gkv-ZY-FB9" firstAttribute="top" secondItem="aU1-Bj-A6P" secondAttribute="bottom" constant="80" id="Kxf-21-EX3"/>
                             <constraint firstItem="b7o-3X-Cma" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="LZw-Da-tGc"/>
+                            <constraint firstItem="gkv-ZY-FB9" firstAttribute="top" secondItem="q8h-iu-W5b" secondAttribute="bottom" constant="9" id="Tan-IX-oSN"/>
                             <constraint firstItem="3e7-4R-a67" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="51" id="VKn-Ui-gGc"/>
                             <constraint firstItem="gkv-ZY-FB9" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="afB-1a-ea8"/>
                             <constraint firstItem="aU1-Bj-A6P" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" id="bqt-kG-sIO"/>
                             <constraint firstItem="gkv-ZY-FB9" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="50" id="cOX-GQ-hAQ"/>
+                            <constraint firstItem="q8h-iu-W5b" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="irr-sS-uxc"/>
                             <constraint firstItem="b7o-3X-Cma" firstAttribute="top" secondItem="3e7-4R-a67" secondAttribute="bottom" constant="40" id="jwF-q7-cdm"/>
                             <constraint firstItem="3e7-4R-a67" firstAttribute="top" secondItem="gkv-ZY-FB9" secondAttribute="bottom" constant="80" id="nAi-t7-wJT"/>
                             <constraint firstItem="b7o-3X-Cma" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="nbd-li-vtI"/>
